@@ -142,6 +142,15 @@ void TimeSlider::valueChanged_slot(int v) {
 }
 
 #if ENABLE_DELAYED_DRAGGING
+void TimeSlider::setDragDelay(int d) {
+	qDebug("TimeSlider::setDragDelay: %d", d);
+	timer->setInterval(d);
+}
+
+int TimeSlider::dragDelay() {
+	return timer->interval();
+}
+
 void TimeSlider::checkDragging(int v) {
 	qDebug("TimeSlider::checkDragging: %d", v);
 	last_pos_to_send = v;
